--- a/PinryShareExtension/Info.plist
+++ b/PinryShareExtension/Info.plist
@@ -19,5 +19,11 @@
 		<key>NSExtensionPrincipalClass</key>
 		<string>$(PRODUCT_MODULE_NAME).ShareViewController</string>
 	</dict>
+	<key>CFBundleDisplayName</key>
+	<string>Pinry Saver</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>CFBundleVersion</key>
+	<string>1</string>
 </dict>
 </plist>
