--- a/PinryShareExtension/Info.plist
+++ b/PinryShareExtension/Info.plist
@@ -12,6 +12,8 @@
 				<integer>10</integer>
 				<key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
 				<integer>5</integer>
+				<key>NSExtensionActivationSupportsFileWithMaxCount</key>
+				<integer>10</integer>
 			</dict>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
