--- a/PinrySaver.xcodeproj/xcshareddata/xcschemes/PinryShareExtension.xcscheme
+++ b/PinrySaver.xcodeproj/xcshareddata/xcschemes/PinryShareExtension.xcscheme
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "2600"
-   version = "1.7">
+   wasCreatedForAppExtension = "YES"
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES"
@@ -15,10 +16,24 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1BB87E002E901DFD00E69DDB"
+               BuildableName = "PinryShareExtension.appex"
+               BlueprintName = "PinryShareExtension"
+               ReferencedContainer = "container:PinrySaver.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "1BB87DED2E901D2000E69DDB"
-               BuildableName = "pinry-saver-ios-2.app"
-               BlueprintName = "pinry-saver-ios-2"
-               ReferencedContainer = "container:pinry-saver-ios-2.xcodeproj">
+               BuildableName = "Pinry Saver.app"
+               BlueprintName = "Pinry Saver"
+               ReferencedContainer = "container:PinrySaver.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,39 +47,46 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
+      askForAppToLaunch = "Yes"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      allowLocationSimulation = "YES"
+      launchAutomaticallySubstyle = "2">
+      <RemoteRunnable
+         runnableDebuggingMode = "0"
+         BundleIdentifier = "com.apple.mobilesafari"
+         RemotePath = "/var/containers/Bundle/Application/8F6BB0BA-8865-4F5C-A4C9-0768A83819F3/MobileSafari.app">
+      </RemoteRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1BB87DED2E901D2000E69DDB"
-            BuildableName = "pinry-saver-ios-2.app"
-            BlueprintName = "pinry-saver-ios-2"
-            ReferencedContainer = "container:pinry-saver-ios-2.xcodeproj">
+            BuildableName = "Pinry Saver.app"
+            BlueprintName = "Pinry Saver"
+            ReferencedContainer = "container:PinrySaver.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
+      debugDocumentVersioning = "YES"
+      launchAutomaticallySubstyle = "2">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1BB87DED2E901D2000E69DDB"
-            BuildableName = "pinry-saver-ios-2.app"
-            BlueprintName = "pinry-saver-ios-2"
-            ReferencedContainer = "container:pinry-saver-ios-2.xcodeproj">
+            BuildableName = "Pinry Saver.app"
+            BlueprintName = "Pinry Saver"
+            ReferencedContainer = "container:PinrySaver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
